[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GUI.gd" type="Script" id=2]

[sub_resource type="ImageTexture" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Terrain" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.591
margin_top = -300.0
margin_right = 511.409
margin_bottom = 300.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -89.0
margin_right = 312.0
margin_bottom = 89.0
rect_min_size = Vector2( 624, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 617.0
margin_bottom = 171.0

[node name="PanelContainer" type="PanelContainer" parent="GUI/PanelContainer/VBoxContainer"]
margin_right = 610.0
margin_bottom = 28.0

[node name="Title" type="Label" parent="GUI/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 603.0
margin_bottom = 21.0
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 610.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 303.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Width" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Width"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Width:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Width"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 2000.0
value = 256.0

[node name="Height" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 303.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Height"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Height:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Height"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 2000.0
value = 150.0

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 307.0
margin_right = 610.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Seed" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 303.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Seed"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Seed:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Seed"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
max_value = 100000.0

[node name="Octaves" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 303.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Octaves"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Octaves:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Octaves"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 9.0
value = 8.0

[node name="Period" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 303.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Period"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Period:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Period"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 500.0
value = 50.0

[node name="Persistence" type="HBoxContainer" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 303.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Persistence"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "  Persistence:"

[node name="SpinBox" type="SpinBox" parent="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Persistence"]
margin_left = 104.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.55

[node name="Generate" type="Button" parent="GUI/PanelContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 610.0
margin_bottom = 164.0
text = "Generate"

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -132.0
margin_top = -40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabInfo" type="Label" parent="GUI/MarginContainer"]
margin_left = 8.0
margin_top = 13.0
margin_right = 122.0
margin_bottom = 27.0
text = "TAB to toggle GUI"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Width/SpinBox" to="." method="_on_WidthSpinBox_value_changed"]
[connection signal="value_changed" from="GUI/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Height/SpinBox" to="." method="_on_HeightSpinBox_value_changed"]
[connection signal="pressed" from="GUI/PanelContainer/VBoxContainer/Generate" to="." method="_on_Generate_pressed"]
